<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- Permet de centrer les inputs -->
    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/titleConfiguration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titleConfiguration"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <LinearLayout
            android:id="@+id/layoutIP"
            android:layout_below="@+id/titleConfiguration"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/labelIP"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/labelIP"
                app:layout_constraintBaseline_toBaselineOf="@+id/editIP"
                app:layout_constraintEnd_toStartOf="@+id/editIP" />

            <EditText
                android:id="@+id/editIP"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutUtilisateur"
            android:layout_below="@+id/layoutIP"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/labelUtilisateur"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/labelUtilisateur" />

            <EditText
                android:id="@+id/editUtilisateur"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPassword"
            android:layout_below="@+id/layoutIP"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/labelPassword"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/labelPassword" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/buttonReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonRetour" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonValider" />
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:ads="http://schemas.android.com/apk/res-auto" >


    </RelativeLayout>

</LinearLayout>

