<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
            android:id="@+id/subLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/titleManualLaunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titleManualLaunch"
                android:textSize="25dp" />

            <LinearLayout
                android:id="@+id/layoutOranges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleManualLaunch"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/labelOranges"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/labelOranges"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editOranges"
                    app:layout_constraintEnd_toStartOf="@+id/editOranges" />

                <EditText
                    android:id="@+id/editOranges"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

    </LinearLayout>
    <!-- Permet de centrer les inputs -->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonReturn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonRetour" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonValider" />
        </LinearLayout>

</LinearLayout>
